Envoy/golang_wasm_filter_shared_data/envoy.yaml
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 9090    
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: edge
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  name: "incrementer_filter_1"
                  root_id: "my_root_id"
                  configuration: # plugin configuration
                    "@type": "type.googleapis.com/google.protobuf.StringValue"
                    value: '' 
                  vm_config:
                    runtime: "envoy.wasm.runtime.v8"
                    vm_id: "my_vm_id" # to run filters in a single VM; used to share data between WASM filters using WASM Proxy API: SharedData and Queues
                    code:
                      local:
                        filename: "/etc/envoy/myfilter.wasm"
                    configuration: {}
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  name: "incrementer_filter_2"
                  root_id: "my_root_id"
                  configuration: # plugin configuration
                    "@type": "type.googleapis.com/google.protobuf.StringValue"
                    value: '' 
                  vm_config:
                    runtime: "envoy.wasm.runtime.v8"
                    vm_id: "my_vm_id" # to run filters in a single VM; used to share data between WASM filters using WASM Proxy API: SharedData and Queues
                    code:
                      local:
                        filename: "/etc/envoy/myfilter.wasm"
                    configuration: {}
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            virtual_hosts:
            - name: forward_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body:
                    inline_string: "Hello!\n"
